# Static-Holographic-Boundary-Theory

./: .gitignore  Dockerfile  Justfile  README.md  pyproject.toml  requirements.txt  tn.py
.github/workflows/: shbt-verify.yml
config/: benchmark_v1.yaml  physics_profile_hashes.json
config/compute/: hpc_cluster.yaml  hpc_scaling.yaml
config/physics_profiles/: standard_model.yaml
data/: cmb_power_spectrum_benchmarks.json  universal_constants.yaml
papers/: gravity.tex  physics_constants.tex  supplementary.tex  supplementary_tolerance_table.tex  tn.tex
proof/: distinction_logic.lean
proofs/: anomaly_cancellation.lean  distinction_logic.lean
pub/: audit_complexity_ceiling.py  baryon_asymmetry.py  constants.py  derive_lambda.py  derive_proton_ratio.py  derive_universe.py  engine.py  export.py  gravity.tex  holographic_tension_verifier.py  main.py  moat_stress_tester.py  noether_bridge.py  physics_engine.py  precision_cosmology_engine.py  proton_stability_audit.py  reporting_engine.py  runtime_config.py  stiff_transport_audit.py  supplementary.tex  test_anomaly_logic.py  tn.py  tn.tex  topology.py  uniqueness_scan_table.tex  uniqueness_theorem.py  verify_benchmark_integrity.py  verify_parity_sink.py
pub/config/: benchmark_v1.yaml
results/: cosmology_baryon_asymmetry.txt  cosmology_precision_cosmology_engine.txt  flavor_eigenvector_rigidity.txt  flavor_flavor_identity_resolver.txt  flavor_stiff_transport_audit.txt  gravity_holographic_tension_verifier.txt  gravity_noether_bridge.txt  multimessenger_audit.json  observational_bridge.py  residuals.json  rigidity_master_transport.txt  rigidity_minimality_proof.txt  rigidity_moat.json  rigidity_rigidity_kernel.txt  rigidity_uniqueness_theorem.txt  uniqueness_report.json
scripts/: audit_generator.py  build_manuscript.py  dashboard.py  derive_lambda.py  derive_proton_ratio.py  derive_universe.py  export.py  map_rigidity_landscape.py  multimessenger_parity_verifier.py  plot_local_moat.py  plotting_runtime.py  sync_system.py  technological_scaling_limits.py  verify_config_integrity.py  verify_dependency_lock.py
shbt/: __init__.py
tests/: moat_stress_tester.py  test_anomaly_logic.py  test_bootstrap_boundary_scan.py  test_build_manuscript.py  test_bulk_dynamics.py  test_bulk_thermodynamics.py  test_causal_execution.py  test_causal_resolution.py  test_complexity.py  test_complexity_sector.py  test_config_loader.py  test_core_bootstrap.py  test_core_evolution_migration.py  test_dashboard.py  test_data_observational_live_bridge.py  test_decoherence_engine.py  test_derivation_api.py  test_differential_geometry.py  test_entanglement.py  test_entropy_engine.py  test_entropy_kernel.py  test_export_script.py  test_gravity_sector.py  test_hologram_renderer.py  test_holographic_amr.py  test_holographic_error_stabilizer.py  test_http_bridge.py  test_io_handler.py  test_live_bridge.py  test_logic_bootstrap.py  test_logic_observer.py  test_logic_uniqueness_proof.py  test_main_logical_entanglement.py  test_main_zero_parameter_flag.py  test_manuscript_containerization.py  test_map_rigidity_landscape.py  test_master_transport.py  test_math_engine.py  test_meta_compiler.py  test_multimessenger_parity_verifier.py  (+30 more)
(+99 files in other folders)
