[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "so10-312-reviewer-framework"
version = "0.1.0"
description = "Referee-facing computational framework for the SO(10)_312 flavor benchmark"
requires-python = ">=3.11"
dependencies = [
  "PyYAML==6.0.3",
  "Jinja2==3.1.6",
  "mpmath==1.3.0",
  "numpy==2.4.1",
  "scipy==1.17.0",
  "matplotlib==3.10.8",
  "pandas==2.3.3",
  "plotly==6.5.2",
  "sympy==1.14.0",
]

[project.optional-dependencies]
dashboard = [
  "streamlit==1.32.0",
]

[dependency-groups]
dev = [
  "pytest==9.0.2",
]

[project.scripts]
so10-312-review = "shbt.main:main"
so10-312-referee = "shbt.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["shbt", "shbt.*"]

[tool.setuptools.package-data]
shbt = ["config/*.yaml", "templates/*.tex.j2"]

[tool.uv]
managed = true
default-groups = ["dev"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::pyparsing.PyparsingDeprecationWarning",
  "ignore:.*resetCache.*:DeprecationWarning",
  "ignore:.*enablePackrat.*:DeprecationWarning",
]
